# freewayai

./: .gitignore  LICENSE  README.md  index.js  package-lock.json  package.json
.devcontainer/: devcontainer.json
docs/: database_templates.md  index.md  pets.md  prompt_templates.md  system_templates.md  user.md  user_inputs.md
sdk/: README.md  pyproject.toml
sdk/.devcontainer/: devcontainer.json
sdk/examples/kb_chatbot/: README.md  chatbot.py  requirements.txt
sdk/examples/kb_chatbot/system_configs/chatbot/: user_inputs.json
sdk/examples/outbound_sales/: README.md  message_builder.py  requirements.txt
sdk/examples/outbound_sales/data/: new_profile_data.json
sdk/examples/outbound_sales/src/: llm_system.py  prompt_messages_to_provider_format.py  prompt_template_format.py
sdk/examples/outbound_sales/system_configs/message_builder/: system_structure.json
sdk/js/: LICENSE  README.md
sdk/js/examples/kb_chatbot/: requirements.txt  sys_utilities.py  tsconfig.json
sdk/js/examples/kb_chatbot/data/: bread_dataset.json
sdk/js/examples/kb_chatbot/system_configs/chatbot/: database_templates.json  prompt_templates.json
sdk/js/examples/outbound_sales/: README.md  index.js  index.ts  package-lock.json  package.json  sys_utilities.ts  test.ts  tsconfig.json
sdk/js/examples/outbound_sales/system_configs/message_builder/: user_inputs.json
sdk/js/freewayai/: package-lock.json  package.json  tsconfig.json
sdk/js/freewayai/src/: database_query_template_format.ts  index.ts  prompt_formatted.ts  prompt_messages_to_provider_format.ts  prompt_template_format.ts  utilities.ts
sdk/js/freewayai/types/: freewayai.d.ts
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: .gitignore
sdk/python/examples/kb_chatbot/: README.md  chatbot.py  sys_utilities.py
sdk/python/examples/kb_chatbot/system_configs/chatbot/: system_structure.json  test_dataset.json
sdk/python/examples/outbound_sales/: README.md  message_builder.py  sys_utilities.py
sdk/python/examples/outbound_sales/data/: profiles_and_messages.json
sdk/python/examples/outbound_sales/system_configs/message_builder/: database_templates.json  prompt_templates.json  system_structure.json
sdk/python/src/freewayai/: __init__.py  database_query_template_format.py  llm_system.py  prompt_formatted.py  prompt_template.py  prompt_template_format.py  system_logger.py  utilities.py
sdk/src/: configure.py  database_query_template_format.py  formatted_messages.py  prompt_messages_to_provider_format.py  prompt_template_format.py  utilities.py
sdk/src/freewayai/: __init__.py  llm_system.py  prompt_formatted.py  token_counting.py  utilities.py
(+10 files in other folders)
