[project]
name = "freewayai"
version = "0.1.2"
dependencies = ["tiktoken",]
authors = [
  { name="Ben Parfitt", email="ben@diligently.ai" },
  { name="Michael Cox", email="michael@diligently.ai" },
]
description = "A new open-standard specification for LLM-backed systems and an SDK for building on it"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/diligentlyai/freewayai"
Issues = "https://github.com/diligentlyai/freewayai/issues"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["freewayai*"]
exclude = ["freewayai.tests*"]
